unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Post_Event_Questions__c.field-meta.xml
<CustomField>
    <fullName>conference360__Post_Event_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These questions will be asked as part of a Post Event survey.</inlineHelpText>
    <label>Post Event Questions</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Attendee</relationshipLabel>
    <relationshipName>Attendee_PostEvent</relationshipName>
    <type>Lookup</type>
</CustomField>