unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Post_Event_Questions_Key__c.field-meta.xml
<CustomField>
    <fullName>conference360__Post_Event_Questions_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Indexed and encrypted key field that is used by the Events API and Questions Urls - is generated in before insert and update triggers if is ever blank</description>
    <externalId>true</externalId>
    <inlineHelpText>Indexed and encrypted key field that is used by the Events API and Questions Urls - is generated in before insert and update triggers if is ever blank</inlineHelpText>
    <label>Post Event Questions Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>