unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Post_Event_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Post_Event_Questions_URL__c</fullName>
    <formula>IF(NOT(ISBLANK(conference360__Post_Event_Questions__c )), BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &#39;https://events.blackthorn.io&#39;) &amp; &#39;/&#39; &amp; $Organization.Id &amp; &#39;/s/&#39; &amp; conference360__Post_Event_Questions__r.conference360__Encrypted_ID__c &amp; &#39;?attendeeId=&#39; &amp; conference360__Encrypted_ID__c, NULL)</formula>
    <inlineHelpText>Public Url to this Form/Survey for this Attendee.</inlineHelpText>
    <label>Post Event Questions URL</label>
    <type>Text</type>
</CustomField>