unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>conference360__Profile_Image__c</fullName>
    <description>URL that contains the attendee&#39;s profile image</description>
    <label>Profile Image</label>
    <type>Url</type>
</CustomField>