unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Purchased_Products__c.field-meta.xml
<CustomField>
    <fullName>conference360__Purchased_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After this person purchases a product, this box will get checked. Make sure Line Item is a related list on Attendee that shows the Item Name.</inlineHelpText>
    <label>Purchased Products</label>
    <type>Checkbox</type>
</CustomField>