unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__QR_Code__c.field-meta.xml
<CustomField>
    <fullName>conference360__QR_Code__c</fullName>
    <description>QR code to see on page layouts, however this is not to be used in email templates.</description>
    <formula>&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot;&amp;CASESAFEID(conference360__Event__c)&amp;&quot;%2B&quot;&amp;CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>QR code to see on page layouts, however this is not to be used in email templates.</inlineHelpText>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>