unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Registration_Language__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_Language__c</fullName>
    <label>Registration Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>conference360__Languages</valueSetName>
    </valueSet>
</CustomField>