unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_Status__c</fullName>
    <inlineHelpText>Required when manually adding attendees. &#39;Registered&#39; would be the default selection.</inlineHelpText>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>To Invite</fullName>
            </value>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Waitlisted - Pending</fullName>
            </value>
            <value>
                <fullName>Waitlisted - Rejected</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>