unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related invoice for this Attendee.</description>
    <inlineHelpText>The event order form related to this attendee.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>