unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Source__c.field-meta.xml
<CustomField>
    <fullName>conference360__Source__c</fullName>
    <description>Tracks the originating source of Attendees</description>
    <inlineHelpText>Tracks the originating source of Attendees</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce UI</fullName>
            </value>
            <value>
                <fullName>Bulk Import</fullName>
            </value>
            <value>
                <fullName>Attendee Registration Component</fullName>
            </value>
            <value>
                <fullName>Campaign Sync</fullName>
            </value>
            <value>
                <fullName>Web App</fullName>
            </value>
            <value>
                <fullName>Check-In App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>