unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__State__c.field-meta.xml
<CustomField>
    <fullName>conference360__State__c</fullName>
    <inlineHelpText>The state of the attendee.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>