unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Title__c.field-meta.xml
<CustomField>
    <fullName>conference360__Title__c</fullName>
    <inlineHelpText>Title of the attendee. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>