unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Track__c.field-meta.xml
<CustomField>
    <fullName>conference360__Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Attendee is related to a single Track, set this lookup.</description>
    <inlineHelpText>If the Attendee is related to a single Track, set this lookup.</inlineHelpText>
    <label>Track</label>
    <referenceTo>conference360__Track__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>