unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Twitter__c.field-meta.xml
<CustomField>
    <fullName>conference360__Twitter__c</fullName>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>