unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <description>If someone registered as themselves or for another person.</description>
    <inlineHelpText>If someone registered as themselves or for another person.</inlineHelpText>
    <label>Attendee Checkout Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Someone else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>