unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__User__c.field-meta.xml
<CustomField>
    <fullName>conference360__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce User related to this Attendee</description>
    <inlineHelpText>Salesforce User related to this Attendee</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>