unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Webinar_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_Join_URL__c</fullName>
    <description>Unique attendee webinar URL. Set automatically.</description>
    <inlineHelpText>Unique attendee webinar/meeting URL. Generated automatically.</inlineHelpText>
    <label>Webinar/Meeting Join URL</label>
    <type>Url</type>
</CustomField>