unpackaged/main/default/objects/conference360__Attendee__c/fields/conference360__Webinar_Registration_Failed__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_Registration_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webinar Registration Failed</label>
    <type>Checkbox</type>
</CustomField>