unpackaged/main/default/objects/conference360__Attendee__c/fields/Do_Not_SMS__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used for Bulk SMS functionality (Blackthorn)</description>
    <label>Do Not SMS</label>
    <type>Checkbox</type>
</CustomField>