unpackaged/main/default/objects/conference360__Attendee__c/fields/Establish_College_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Establish_College_Readiness__c</fullName>
    <description>Used in Pre-Orientation Task Blackthorn templates/schedules</description>
    <formula>IF( 
    Recruitment_Opportunity__r.Has_Usable_Placement_Scores_in_All_Areas__c = true    ||
    ISPICKVAL(Recruitment_Opportunity__r.DevEd_Exemption_Status__c, &quot;Yes&quot;),
    &quot;Completed&quot;, &quot;Incomplete&quot;
  )</formula>
    <label>Establish College Readiness</label>
    <type>Text</type>
</CustomField>