unpackaged/main/default/objects/conference360__Attendee__c/fields/Event_Campus__c.field-meta.xml
<CustomField>
    <fullName>Event_Campus__c</fullName>
    <description>Populated by Flow when Attendee record is created based on related Event</description>
    <inlineHelpText>This field is populated when Attendee linked to an Event</inlineHelpText>
    <label>Event Campus</label>
    <length>250</length>
    <type>Text</type>
</CustomField>