unpackaged/main/default/objects/conference360__Attendee__c/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <description>Populated by Flow when Attendee created/edited based on related Event</description>
    <inlineHelpText>This field will populate once Attendee is linked to an Event</inlineHelpText>
    <label>Event Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>