unpackaged/main/default/objects/conference360__Attendee__c/fields/Event_Start_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_Text__c</fullName>
    <description>Text friendly display of Event&#39;s Start Date. Used for SMS tempaltes</description>
    <formula>IF(ISBLANK(TEXT(conference360__Event__r.conference360__Event_Start_Date__c)), &quot;&quot;, CASE(MONTH(conference360__Event__r.conference360__Event_Start_Date__c ),
1,&quot;Jan&quot;,
2,&quot;Feb&quot;,
3,&quot;Mar&quot;,
4,&quot;Apr&quot;,
5,&quot;May&quot;,
6,&quot;Jun&quot;,
7,&quot;Jul&quot;,
8,&quot;Aug&quot;,
9,&quot;Sep&quot;,
10,&quot;Oct&quot;,
11,&quot;Nov&quot;,
12,&quot;Dec&quot;,
&quot;&quot;)
&amp; &quot; &quot; &amp;
TEXT(DAY( conference360__Event__r.conference360__Event_Start_Date__c ))
&amp; &quot;, &quot; &amp;
TEXT(YEAR( conference360__Event__r.conference360__Event_Start_Date__c ))
)</formula>
    <inlineHelpText>Text friendly display to use in templates</inlineHelpText>
    <label>Event Start Date (Text)</label>
    <type>Text</type>
</CustomField>