unpackaged/main/default/objects/conference360__Attendee__c/fields/Event_Start_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Time_Text__c</fullName>
    <description>Text friendly display of Event&#39;s Start Time</description>
    <formula>IF(ISBLANK(conference360__Event__r.conference360__Event_Start_Time__c),&quot;&quot;, 
  IF(
     OR(
        VALUE(LEFT(TEXT( conference360__Event__r.conference360__Event_Start_Time__c ), 2)) = 0,
        VALUE(LEFT(TEXT(conference360__Event__r.conference360__Event_Start_Time__c ), 2)) = 12
        ),
     &quot;12&quot;,
     TEXT(VALUE(LEFT(TEXT(conference360__Event__r.conference360__Event_Start_Time__c ), 2))
     -
     IF(VALUE(LEFT(TEXT(conference360__Event__r.conference360__Event_Start_Time__c ), 2)) &lt; 12, 0, 12))
     )
  &amp; &quot;:&quot; &amp;
  MID(TEXT(conference360__Event__r.conference360__Event_Start_Time__c ), 4, 2)
  &amp; &quot; &quot; &amp;
  IF(
      VALUE(LEFT(TEXT(conference360__Event__r.conference360__Event_Start_Time__c ), 2)) &lt; 12, &quot;AM&quot;, &quot;PM&quot;
     )
)</formula>
    <inlineHelpText>Text friendly display used for templates</inlineHelpText>
    <label>Event Start Time (Text)</label>
    <type>Text</type>
</CustomField>