unpackaged/main/default/objects/conference360__Attendee__c/fields/Event_Term__c.field-meta.xml
<CustomField>
    <fullName>Event_Term__c</fullName>
    <formula>conference360__Event__r.Term__r.Name</formula>
    <label>Event Term</label>
    <type>Text</type>
</CustomField>