unpackaged/main/default/objects/conference360__Attendee__c/fields/Home_Campus__c.field-meta.xml
<CustomField>
    <fullName>Home_Campus__c</fullName>
    <description>The Home campus of the Attendee</description>
    <formula>TEXT(Recruitment_Opportunity__r.Home_Campus__c)</formula>
    <inlineHelpText>The Home Campus of the Attendee</inlineHelpText>
    <label>Home Campus</label>
    <type>Text</type>
</CustomField>