unpackaged/main/default/objects/conference360__Attendee__c/fields/Lead_Source_fx__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_fx__c</fullName>
    <description>Used for reportin gon Events</description>
    <formula>TEXT(Recruitment_Opportunity__r.LeadSource)</formula>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>