unpackaged/main/default/objects/conference360__Attendee__c/fields/MDID__c.field-meta.xml
<CustomField>
    <fullName>MDID__c</fullName>
    <description>MDID</description>
    <formula>conference360__Contact__r.Student_Employee_ID__c</formula>
    <label>MDID</label>
    <type>Text</type>
</CustomField>