unpackaged/main/default/objects/conference360__Attendee__c/fields/Meta_Major_fx__c.field-meta.xml
<CustomField>
    <fullName>Meta_Major_fx__c</fullName>
    <description>Used for reporting on Events</description>
    <formula>TEXT (Recruitment_Opportunity__r.Meta_Major__c)</formula>
    <label>Meta Major</label>
    <type>Text</type>
</CustomField>