unpackaged/main/default/objects/conference360__Attendee__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <description>Used in OPH Student Form to capture mobile phone. Used in Flow to pass value to related Contact</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>