unpackaged/main/default/objects/conference360__Attendee__c/fields/PCA_Assigned_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>PCA_Assigned_to_Contact__c</fullName>
    <formula>conference360__Contact__r.Owner.FirstName &amp; &quot; &quot; &amp; conference360__Contact__r.Owner.LastName</formula>
    <label>PCA Assigned to Contact</label>
    <type>Text</type>
</CustomField>