unpackaged/main/default/objects/conference360__Attendee__c/fields/PCA_Email__c.field-meta.xml
<CustomField>
    <fullName>PCA_Email__c</fullName>
    <description>used for blackthorn email templates</description>
    <formula>conference360__Contact__r.PCA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA Email</label>
    <type>Text</type>
</CustomField>