unpackaged/main/default/objects/conference360__Attendee__c/fields/PCA_Phone__c.field-meta.xml
<CustomField>
    <fullName>PCA_Phone__c</fullName>
    <description>Used for blackthorn email templates</description>
    <formula>conference360__Contact__r.PCA_Phone__c</formula>
    <label>PCA Phone</label>
    <type>Text</type>
</CustomField>