unpackaged/main/default/objects/conference360__Attendee__c/fields/Recruitment_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by Flow. Lookup to Opp to bring in various Opp fields for reporting. Also used by BT pre-Orientation templates</description>
    <label>Recruitment Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>