unpackaged/main/default/objects/conference360__Attendee__c/fields/Relationship_to_Student__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Student__c</fullName>
    <description>Value will be used to create new Relationships to Student</description>
    <label>Relationship to Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Parent&#39;s Sibling</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>