unpackaged/main/default/objects/conference360__Attendee__c/fields/Stage_fx__c.field-meta.xml
<CustomField>
    <fullName>Stage_fx__c</fullName>
    <description>Used for reporting on EVents</description>
    <formula>TEXT(Recruitment_Opportunity__r.StageName)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>