unpackaged/main/default/objects/conference360__Attendee__c/fields/Student_Onboarding_Type_fx__c.field-meta.xml
<CustomField>
    <fullName>Student_Onboarding_Type_fx__c</fullName>
    <description>Used for reporting on Events</description>
    <formula>TExT(Recruitment_Opportunity__r.Student_Onboarding_Type__c)</formula>
    <label>Student Onboarding Type</label>
    <type>Text</type>
</CustomField>