unpackaged/main/default/objects/conference360__Attendee__c/fields/Total_Credits_Registered_fx__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Registered_fx__c</fullName>
    <description>Used for Events reports</description>
    <formula>Recruitment_Opportunity__r.Total_Credits_Registered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits Registered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>