unpackaged/main/default/objects/conference360__Attendee__c/listViews/Attendees_to_add_to_Event.listView-meta.xml
<ListView>
    <fullName>Attendees_to_add_to_Event</fullName>
    <columns>Event_Category__c</columns>
    <columns>NAME</columns>
    <columns>Attendee_Type__c</columns>
    <columns>conference360__First_Name2__c</columns>
    <columns>conference360__Last_Name2__c</columns>
    <columns>conference360__Registration_Status__c</columns>
    <columns>Event_Campus__c</columns>
    <columns>conference360__Event_Item__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>conference360__Event_Name__c</field>
        <operation>equals</operation>
        <value>North Campus Spring Term 2024 Orientation - 11/16/23</value>
    </filters>
    <filters>
        <field>conference360__Registration_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>How to Add Category to Events</label>
</ListView>