unpackaged/main/default/objects/conference360__Attendee__c/listViews/Collegewide_For_OTHER_Check_In_TODAY.listView-meta.xml
<ListView>
    <fullName>Collegewide_For_OTHER_Check_In_TODAY</fullName>
    <columns>conference360__Attendance_Status__c</columns>
    <columns>Attendee_Type__c</columns>
    <columns>conference360__Event_Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>conference360__Attendee_Full_Name__c</columns>
    <columns>conference360__Contact__c</columns>
    <columns>conference360__Event_Name__c</columns>
    <columns>conference360__Registration_Status__c</columns>
    <columns>conference360__Phone2__c</columns>
    <columns>conference360__Phone__c</columns>
    <columns>Mobile_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>conference360__Registration_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <filters>
        <field>Event_Category__c</field>
        <operation>equals</operation>
        <value>Other On-Campus Event</value>
    </filters>
    <filters>
        <field>conference360__Event_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Collegewide - For OTHER Check-In - TODAY</label>
</ListView>