unpackaged/main/default/objects/conference360__Attendee__c/listViews/Hialeah_FAFSA.listView-meta.xml
<ListView>
    <fullName>Hialeah_FAFSA</fullName>
    <columns>conference360__Attendance_Status__c</columns>
    <columns>Attendee_Type__c</columns>
    <columns>conference360__Event_Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>conference360__Attendee_Full_Name__c</columns>
    <columns>conference360__Contact__c</columns>
    <columns>conference360__Event_Name__c</columns>
    <columns>conference360__Registration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Category__c</field>
        <operation>equals</operation>
        <value>FAFSA</value>
    </filters>
    <filters>
        <field>conference360__Event_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Event_Campus__c</field>
        <operation>equals</operation>
        <value>Hialeah Campus</value>
    </filters>
    <filters>
        <field>conference360__Registration_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <label>Hialeah - FAFSA</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Hialeah_Campus_Public_Group</group>
    </sharedTo>
</ListView>