unpackaged/main/default/objects/conference360__Attendee__c/listViews/Hialeah_For_ORI_Check_In_TODAY.listView-meta.xml
<ListView>
    <fullName>Hialeah_For_ORI_Check_In_TODAY</fullName>
    <columns>conference360__Attendance_Status__c</columns>
    <columns>Academic_Program_fx__c</columns>
    <columns>conference360__Contact__c</columns>
    <columns>Completed_FOA__c</columns>
    <columns>Completed_Shark_Intake__c</columns>
    <columns>Establish_College_Readiness__c</columns>
    <columns>Student_Onboarding_Type_fx__c</columns>
    <columns>conference360__Registration_Status__c</columns>
    <columns>conference360__Event_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Category__c</field>
        <operation>equals</operation>
        <value>Orientation</value>
    </filters>
    <filters>
        <field>conference360__Registration_Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </filters>
    <filters>
        <field>conference360__Event_Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Event_Campus__c</field>
        <operation>equals</operation>
        <value>Hialeah Campus</value>
    </filters>
    <label>Hialeah - For ORI Check-In - TODAY</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
        <group>Hialeah_Campus_Public_Group</group>
    </sharedTo>
</ListView>